@@ -262,6 +262,9 @@
 	- add a macro to create a sub-package with debugging symbols.
 	- merge signature returns into rpmRC.
 	- python: exceptions on NOKEY/NOTTRUSTED.
+	- python: don't remap NOKEY/UNTRUSTED to OK.
+	- beecrypt: change local absolute symbols to defines for prelinking.
+	- update ru.po.
 
 4.0.3 -> 4.0.4:
 	- solaris: translate i86pc to i386 (#57182).
